# web-resume-builder

./: .gitignore  Dockerfile  README.md  \  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  run.sh  wsgi.py
migrations/versions/: 07be49b4c9ce_updates_for_jobapplication.py  17fd2c15e37f_initial_migration_with_all_models_.py  183dc359ae03_add_many_to_may_relationships_to_.py  21e0e57ad81f_added_basicinfo_and_summary_resume_.py  320c318afcd9_add_language_model.py  3feed69f8206_create_invitecode_model.py  4187f502c164_added_typical_timestamps.py  4cdaad2e8e4e_initial_migration.py  7023bbedcd75_created_eductaion_model.py  7de7970f4d8b_initial_migration_to_create_all_models.py  a34c4e2939f3_add_experience_table.py  ac28ba606033_add_skills_model.py  bc7b152acc96_is_admin_field_added_to_user_model.py  cc76a2625b37_add_is_active_field_on_user_model.py  cd4ec0192cab_create_theme_model.py  d48552d4b6b7_adjusted_mostly_increased_size_of_.py  e9a266987aa9_created_resume_builder_and_relationships.py  ee13f41d6e62_remove_unneccessary_nullable_flag_from_.py  fbc716718bf2_built_resume_and_theme_relationship.py
resume_builder/: __init__.py  config.py  decorators.py  models.py
resume_builder/admin/: forms.py  routes.py
resume_builder/auth/: exceptions.py  forms.py  routes.py  services.py
resume_builder/job_application_tracker/: __init__.py  routes.py
resume_builder/main/: __init__.py
resume_builder/resume_builder_core/: __init__.py  exceptions.py  forms.py  html_utils.py  routes.py  services.py
tests/: conftest.py  test_basic_info_service.py
(+87 files in other folders)
